Project 2 Part 1 Correction
