# routes/index.js
@@ -3,10 +3,11 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => { 
-    //#Swagger tags=['Hello World']
-    res.send('Hello World');
+    res.send('Welcome to my Project 2!');
 });
 
 router.use('/users', require('./users'));
+router.use('/products', require('./products')); //new route added   
 
 module.exports = router;
+    
